<resources>
    <string name="app_name">Jelajah</string>

    <string name="salam">Assalamu`alaikum</string>
    <string name="location">Lokasi kamu…</string>
    <string name="next_time_prayer">Waktu Ibadah Selanjutnya</string>
    <string name="now_time_prayer">Sekarang Waktu Ibadah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_location_explanation">dialog location_explanation</string>
    <string name="find_location">Find Location…</string>
    <string name="surah">Surah</string>
    <string name="favorite_surah">Surah Favorite</string>
    <string name="loading">Loading…</string>

    <string name="init_permission_locate">Aplikasi membutuhkan lokasi Anda untuk menghitung waktu sholat yang akurat</string>
    <string name="locate_me">Temukan aku</string>

    <string name="adzan">Adhan</string>
    <string name="imsak">Imsak</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuha">Dhuha</string>
    <string name="dhuhr">Dhuhur</string>
    <string name="asr">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>

    <string name="notification_body_adzan">Sekarang waktunya salat %s.</string>
    <string name="notification_body">Sekarang waktunya %s.</string>
    <string name="alarm_timed_before_adzan">%s menit lagi saatnya salat %s</string>
    <string name="alarm_timed_before">%s menit lagi saatnya %s</string>

    <string name="alarm_shalat_now">Ingatkan waktu salat</string>
    <string name="alarm_before_time_salat">Ingatkan %s menit sebelum salat</string>

    <string name="error_permission_location">This application is not given permission to access your location.</string>

    <string-array name="car_array">
        <item>Audi</item>
        <item>BMW</item>
        <item>Benz</item>
        <item>Ford</item>
        <item>Toyota</item>
        <item>Tesla</item>
        <item>Honda</item>
        <item>Hyundai</item>
    </string-array>

    <string name="nama_surah">Nama Surah</string>
    <string name="s1">Al-Fatihah</string>
    <string name="s2">Al-Baqarah</string>
<!--    <string name="s3">Al-Fatihah</string>-->
<!--    <string name="s4">Al-Fatihah</string>-->
<!--    <string name="s5">Al-Fatihah</string>-->
<!--    <string name="s6">Al-Fatihah</string>-->
<!--    <string name="s7">Al-Fatihah</string>-->
<!--    <string name="s8">Al-Fatihah</string>-->
<!--    <string name="s9">Al-Fatihah</string>-->
<!--    <string name="s10">Al-Fatihah</string>-->
<!--    <string name="s11">Al-Fatihah</string>-->
<!--    <string name="s12">Al-Fatihah</string>-->
<!--    <string name="s13">Al-Fatihah</string>-->
<!--    <string name="s14">Al-Fatihah</string>-->
<!--    <string name="s15">Al-Fatihah</string>-->
<!--    <string name="s16">Al-Fatihah</string>-->
<!--    <string name="s17">Al-Fatihah</string>-->
<!--    <string name="s18">Al-Fatihah</string>-->
<!--    <string name="s19">Al-Fatihah</string>-->
<!--    <string name="s20">Al-Fatihah</string>-->
<!--    <string name="s21">Al-Fatihah</string>-->
<!--    <string name="s22">Al-Fatihah</string>-->
<!--    <string name="s23">Al-Fatihah</string>-->
<!--    <string name="s24">Al-Fatihah</string>-->
<!--    <string name="s25">Al-Fatihah</string>-->
<!--    <string name="s26">Al-Fatihah</string>-->
<!--    <string name="s27">Al-Fatihah</string>-->
<!--    <string name="s28">Al-Fatihah</string>-->
<!--    <string name="s29">Al-Fatihah</string>-->
<!--    <string name="s30">Al-Fatihah</string>-->
<!--    <string name="s31">Al-Fatihah</string>-->
<!--    <string name="s32">Al-Fatihah</string>-->
<!--    <string name="s33">Al-Fatihah</string>-->

</resources>